--- a/949-h/949-h.htm
+++ b/949-h/949-h.htm
@@ -1687,7 +1687,7 @@ budge the mechanism than a child could open a burglar-proof vault.
 of the tank, for there the air was purer. As he did so his fingers
 touched something. He started as they closed around the handle of a big
 monkey wrench. It was one he had brought into the place with him.
-Imbued with new hope be struck a match and lighted his lantern, which
+Imbued with new hope he struck a match and lighted his lantern, which
 he had allowed to go out as it burned up too much of the oxygen. By the
 gleam of it he looked to see if there were any bolts or nuts he could
 loosen with the wrench, in order to slide the door back. It needed but
@@ -2562,7 +2562,7 @@ you'd risk it."
 </P>
 
 <P>
-"Risk it? Bless my liver! Of course I'll risk' it! It can't be as bad
+"Risk it? Bless my liver! Of course I'll risk it! It can't be as bad
 as sailing in the air. You can't fall, that's certain."
 </P>
 
@@ -2780,7 +2780,7 @@ who came to the instrument in Philadelphia.
 <P>
 "Well, what does he say?" was the impatient question. "I can't
 understand his not wanting to try for the Government prize. It is
-astonishing. You said you were going to discover the reason, Mr Berg,
+astonishing. You said you were going to discover the reason, Mr. Berg,
 but you haven't done so."
 </P>
 
@@ -2923,7 +2923,7 @@ said Tom's father. "We are only waiting for the arrival of Captain
 Alden Weston, and then we will go. Even if Bentley & Eagert make a try
 for the treasure we'll have the start of them, and this will be a case
 of first come, first served. Don't worry, Tom. I'm glad you're going,
-Mr Damon. Come, I will show you our submarine."
+Mr. Damon. Come, I will show you our submarine."
 </P>
 
 <P>
@@ -2963,7 +2963,7 @@ feel even safer in that than in the Red Cloud."
 </P>
 
 <P>
-"Oh, don't go back on the airship!" exclaimed Mr Sharp. "I was counting
+"Oh, don't go back on the airship!" exclaimed Mr. Sharp. "I was counting
 on taking you on another trip."
 </P>
 
@@ -3297,7 +3297,7 @@ Trial of the Submarine
 Tom felt such a relief at hearing of Captain Weston's ruse that his
 appetite, sharpened by an early breakfast and the sea air, came to him
 with a rush, and he had a second morning meal with the odd sea captain,
-who chuckled heartily when he thought of how Mr Berg had been deceived.
+who chuckled heartily when he thought of how Mr. Berg had been deceived.
 </P>
 
 <P>
@@ -3409,7 +3409,7 @@ wrong route," and he laughed again.
 </P>
 
 <P>
-It was no small relief to Mr Swift and Mr. Sharp to learn that Captain
+It was no small relief to Mr. Swift and Mr. Sharp to learn that Captain
 Weston had no objections to a submarine, as they feared he might have.
 The captain, in his diffident manner, made friends at once with the
 treasure-hunters, and he and Mr. Damon struck up quite an acquaintance.
@@ -3811,7 +3811,7 @@ managed as well from there as from the other place.
 </P>
 
 <P>
-"Is everything all right?" asked Mr Swift as he went into the
+"Is everything all right?" asked Mr. Swift as he went into the
 engine-room, where Garret Jackson and Mr. Sharp were busy with oil cans.
 </P>
 
@@ -5308,7 +5308,7 @@ shaken off.  Clearly the Wonder was a speedy craft.
 <P>
 "It's too bad that we've got to fight them, as well as run the risk of
 lots of other troubles which are always present when sailing under
-water," observed Mr Damon, who wandered about the submarine like the
+water," observed Mr. Damon, who wandered about the submarine like the
 nervous person he was. "Bless my shirt-studs! Can't we blow them up, or
 cripple them in some way? They have no right to go after our treasure."
 </P>
@@ -5529,7 +5529,7 @@ electricity. It forces the cannon ball out with great energy."
 
 <P>
 "I wonder what they will do next?" observed the captain, peering
-through a bull'seye.
+through a bull's eye.
 </P>
 
 <P>
@@ -7353,7 +7353,7 @@ the sailor made some peculiar motions, and the lad puzzled over them.
 They had gone nearly around the wreck now, and as yet had seen no way
 in which to get at the gold. As they passed around the bow, which was
 in a deep shadow from a great rock, they caught sight of the submarine
-lying a short distance away. Light streamed from many hull's-eyes, and
+lying a short distance away. Light streamed from many bull's-eyes, and
 Tom felt a sense of security as he looked at her, for it was lonesome
 enough in that great depth of water, unable to speak to his companion,
 who was a few feet in advance.
@@ -7803,7 +7803,7 @@ for Tom and his father, but were not successful.
 <P>
 A few days after arriving at the seacoast cottage, Tom, his father and
 Mr. Damon went to Shopton in the airship.  Captain Weston, Garret
-Jackson and Mr Sharp remained behind in charge of the submarine. It was
+Jackson and Mr. Sharp remained behind in charge of the submarine. It was
 decided that the Swifts would keep the craft and not sell it to the
 Government, as Tom said they might want to go after more treasure some
 day.
